# resume-flow-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  deployment.yaml  pyproject.toml
app/: main.py
app/core/: config.py
app/models/: __init__.py  ats.py  field.py  resume.py  tailor.py
app/prompts/ats/: system.md  user.md
app/prompts/field_processor/: generate.md  rewrite.md  system.md
app/prompts/resume_parser/: system.md  user.md
app/prompts/tailor/: system.md  user.md
app/routes/: resume.py
app/services/: content_extractor.py  field_processor.py  resume_parser.py  resume_processor.py  tailor_service.py
app/services/ats/: ats_pipeline.py  essentials_checker.py  llm_analyzer.py
app/utils/: __init__.py  file_utils.py  prompt_loader.py  text_utils.py
tests/: test_ats_essentials.py  test_ats_llm_analyzer.py  test_ats_models.py  test_ats_pipeline.py  test_ats_route.py  test_prompt_loader.py  test_services.py
