[project]
name = "resume-flow-ai"
version = "0.1.0"
description = "An intelligent parser and AI first microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "huggingface-hub>=1.2.4",
    "pydantic-settings>=2.1.0",
    "pymupdf>=1.23.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "E501"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
