[project]
name = "resume-flow-ai"
version = "0.1.0"
description = "An intelligent parser and AI first microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "filetype>=1.2.0",
    "huggingface-hub>=1.2.4",
    "langchain>=1.2.18",
    "langchain-groq>=1.1.2",
    "logfire[fastapi]>=4.32.1",
    "mypy>=2.0.0",
    "pillow>=12.2.0",
    "pydantic-settings>=2.1.0",
    "pymupdf>=1.23.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "E501"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[[tool.mypy.overrides]]
module = "fitz.*"
ignore_missing_imports = true
